# chaosinventory

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  chaosinventory.cfg
doc/: .gitignore  (+4 more)
src/: .gitignore  MANIFEST.in  chaosinventory.cfg.example  manage.py  requirements.txt  schema.yml  setup.cfg  setup.py
src/chaosinventory/: asgi.py  fallback.cfg  settings.py  urls.py  wsgi.py
src/chaosinventory/authentication/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
src/chaosinventory/authentication/migrations/: 0001_initial.py  0002_oidcaccesstoken_oidcapplication_oidcgrant_oidcidtoken_oidcrefreshtoken.py
src/chaosinventory/authentication/models/: __init__.py  oidc.py  token.py  user.py
src/chaosinventory/authentication/oidc/: authentication.py  exceptions.py  jwt.py  pkce.py  urls.py
src/chaosinventory/authentication/token/: authentication.py  serializers.py  urls.py  views.py
src/chaosinventory/base/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/chaosinventory/base/migrations/: 0001_initial.py  0002_auto_20210208_2019.py  0002_auto_20210208_2215.py  0002_auto_20210311_1752.py  0003_auto_20210228_1250.py  0003_auto_20210330_1554.py  0004_auto_20210611_1849.py
src/chaosinventory/base/views/: __init__.py  api.py
src/project-static/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json
src/project-static/src/: App.jsx  main.jsx
src/requirements/: dev.txt
src/tests/: mixins.py
src/tests/authentication/: test_token.py
src/tests/base/: test_api.py  test_models.py
(+89 files in other folders)
