[metadata]
name = chaosinventory
version = attr: chaosinventory.__version__
author = Chaosinventory Team
author_email = devnull+not-setup@chaosinventory.de
license = AGPL-3.0
#long_description = file: README.md
long_description_content_type = text/markdown
keywords = chaos, inventory, organisation, blåhaj
url = https://github.com/chaosinventory/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django :: 3.1
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
project_urls =
  Documentation = https://chaosinventory.readthedocs.io/
  Source = https://github.com/chaosinventory/chaosinventory
  Tracker = https://github.com/chaosinventory/chaosinventory/issues

[options]
packages = find:
install_requires =
  Django==3.1.*
  psycopg2-binary
  djangorestframework==3.12.*
  django-filter==2.4.*
python_requires = >=3.5

[options.entry_points]
console_scripts =
    chaosinventory = chaosinventory.__main__:main

[flake8]
max-line-length = 119
exclude =
  migrations
  static
  build
  dist
  sdist

[isort]
include_trailing_comma = true
known_first_party = chaosinventory
multi_line_output = 5
line_length = 79
honor_noqa = true
skip =
  chaosinventory/settings.py
  chaosinventory/base/migrations/
